--- a/index.html
+++ b/index.html
@@ -5,35 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boutique e-commerce de PLANTES 🌵</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="loop.js" defer></script>
 </head>
 <body>
+    <h1>Boutique e-commerce de PLANTES 🌵</h1>
 
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="/pages/filter.html">Naviguer vers le tuto sur Filter</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <div class="card" id="card">
+        <img src="assets/images/cactus.png" alt="Image d'un cactus omg">
+        <h3>Cactus Régina</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quod. Vero veniam laborum voluptate ipsam reprehenderit obcaecati possimus minima similique minus ut, vel modi ad? Autem et dolore optio totam.</p>
+        <p id="stock">stock : 9</p>
+        <button id="cta-buy">Acheter ce superbe Cactus 🤩</button>
 
-    <main>
-        <h1>Boutique e-commerce de PLANTES 🌵</h1>
-
-        <div class="card" id="card">
-            <img src="assets/images/cactus.png" alt="Image d'un cactus omg">
-            <h3>Cactus Régina</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quod. Vero veniam laborum voluptate ipsam reprehenderit obcaecati possimus minima similique minus ut, vel modi ad? Autem et dolore optio totam.</p>
-            <p id="stock">stock : 9</p>
-            <button id="cta-buy">Acheter ce superbe Cactus 🤩</button>
-    
-        </div>    
-    </main>
-
-    <footer>Peacepilou corporation @2023</footer>
-
+    </div>
 
 </body>
 </html>
