--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boutique e-commerce de PLANTES 🌵</title>
     <link rel="stylesheet" href="style.css">
-    <script src="loop.js" defer></script>
+    <script src="/scripts/loop.js" defer></script>
 </head>
+
 <body>
-    <h1>Boutique e-commerce de PLANTES 🌵</h1>
 
-    <div class="card" id="card">
-        <img src="assets/images/cactus.png" alt="Image d'un cactus omg">
-        <h3>Cactus Régina</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quod. Vero veniam laborum voluptate ipsam reprehenderit obcaecati possimus minima similique minus ut, vel modi ad? Autem et dolore optio totam.</p>
-        <p id="stock">stock : 9</p>
-        <button id="cta-buy">Acheter ce superbe Cactus 🤩</button>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="pages/filter.html">OMG go filter</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-    </div>
+
+    <main>
+
+        <h1>Boutique e-commerce de PLANTES 🌵</h1>
+        <div class="card" id="card">
+            <img src="assets/images/cactus.png" alt="Image d'un cactus omg">
+            <h3>Cactus Régina</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quod. Vero veniam laborum voluptate ipsam
+                reprehenderit obcaecati possimus minima similique minus ut, vel modi ad? Autem et dolore optio totam.
+            </p>
+            <p id="stock">stock : 9</p>
+            <button id="cta-buy">Acheter ce superbe Cactus 🤩</button>
+        </div>
+
+    </main>
+
+    <footer>@Peacepilou 2023 cours privés</footer>
+
 
 </body>
+
 </html>
