ended destructuring course on objects

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <li>
                     <a href="pages/filter.html">OMG go filter</a>
                 </li>
+                <li>
+                    <a href="pages/em-vs-px.html">OMG go EM vs PXL</a>
+                </li>
+                <li>
+                    <a href="pages/destructuring.html">OMG go to destructuring</a>
+                </li>
             </ul>
         </nav>
     </header>
