ended youtube project with filter input search bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boutique e-commerce de PLANTES 🌵</title>
     <link rel="stylesheet" href="style.css">
-    <script src="/scripts/loop.js" defer></script>
+    <script src="/scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -22,6 +22,9 @@
                 </li>
                 <li>
                     <a href="pages/destructuring.html">OMG go to destructuring</a>
+                </li>
+                <li>
+                    <a href="pages/youtube.html">OMG go to youtoube</a>
                 </li>
             </ul>
         </nav>
