fetched pokemons from api

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <li>
                     <a href="pages/youtube.html">OMG go to youtoube</a>
                 </li>
+                <li>
+                    <a href="pages/pokemon-api.html">OMG go to pokemon-api</a>
+                </li>
             </ul>
         </nav>
     </header>
