--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <li>
                     <a href="pages/pokemon-api.html">OMG go to pokemon-api</a>
                 </li>
+                <li>
+                    <a href="pages/url-to-background-color.html?c2d6c2-ffcfd2-ffafc5-553e4e-e0479e">OMG go to Url to Background color</a>
+                </li>
             </ul>
         </nav>
     </header>
