--- a/pages/pokemon-api.html
+++ b/pages/pokemon-api.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poké-api</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/pokemon-api.css">
     <script src="../scripts/pokemon-api.js" defer></script>
 </head>
