from root lvl loool

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 <li>
                     <a href="pages/url-to-background-color.html?c2d6c2-ffcfd2-ffafc5-553e4e-e0479e">OMG go to Url to Background color</a>
                 </li>
+                <li>
+                    <a href="pages/poo.html">OMG go to POO</a>
+                </li>
             </ul>
         </nav>
     </header>
