--- a/pages/poo.html
+++ b/pages/poo.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poké-api</title>
+    <title>Document</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../styles/pokemon-api.css">
-    <script src="../scripts/pokemon-api.js" defer></script>
+    <link rel="stylesheet" href="../styles/poo.css">
+    <script src="../scripts/poo.js" defer></script>
+
 </head>
 <body>
 
@@ -21,8 +22,6 @@
         </nav>
     </header>
 
-    <button onclick="getPokemon()">Récupérer les 10 premiers pokémons</button>
-
-    <section id="pokemon-list"></section>
+    
 </body>
 </html>
